fix: post date was invisible in the big post tiles.

--- a/editor/blog/static/css/home_page_styles.css
+++ b/editor/blog/static/css/home_page_styles.css
@@ -43,6 +43,11 @@
     justify-content: space-between;
 }
 
+/*For large post tiles*/
+.caption .post-date {
+    margin-top: 0.4em;
+}
+
 .card .card-title {
     color: #000;
     font-size: 21.5px;
